# invoice-intake-agent

./: .gitignore  README.md  pyproject.toml
inputs/: Email.json
src/invoice_intake_agent/: __main__.py  app.py  cli.py  config.py  invoice_schema.py
src/invoice_intake_agent/agents/: guardrails.py  invoice_agent.py  orchestrator.py
src/invoice_intake_agent/tools/: emails.py  extract_invoice.py  notify.py
src/invoice_intake_agent/utils/: console.py  emails.py  runtime.py
tests/: test_email_loader.py  test_extract_invoice.py
